Добавлена функция получения пользователей по внешним ID в API, обновлены соответствующие обработчики и спецификации. Исправлены ошибки в методах получения пользователей по внутренним ID и синхронизации с сервисом ff-id.
